# TSXPulse

./: .gitignore  README.md  dashboard.py  pyproject.toml
config/: config.yaml
scripts/: backtest.py  force_signal_test.py  migrate_db.py  reconcile_eod.py  run_cycle.py  send_test_message.py  smoke_test.py  stats.py
scripts/tasks/: INSTALL.md  reconcile_eod.bat  run_cycle.bat
src/TSXPulse/: logging_setup.py  timeutil.py
src/TSXPulse/backtest/: engine.py
src/TSXPulse/data/: indicators.py  yfinance_provider.py
src/TSXPulse/execution/: broker_base.py  factory.py  manual_broker.py
src/TSXPulse/notifications/: discord.py
src/TSXPulse/risk/: rules.py
src/TSXPulse/strategies/: ma_crossover.py  mean_reversion.py
src/stock_predictor/: calendar_util.py  config.py  orchestrator.py  reconciler.py  stats.py
src/stock_predictor/data/: provider_base.py
src/stock_predictor/execution/: paper_broker.py
src/stock_predictor/notifications/: templates.py
src/stock_predictor/storage/: models.py  repo.py
src/stock_predictor/strategies/: base.py  registry.py
tests/: test_reconciler.py  test_risk.py
